--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,10 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "spatie/laravel-medialibrary": "^10.0.0"
+        "phpmailer/phpmailer": "^6.8",
+        "spatie/laravel-medialibrary": "^10.0.0",
+        "tucker-eric/eloquentfilter": "^3.2",
+        "twbs/bootstrap-icons": "^1.10"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
